tests/algorithms/x/Kotlin/searches/hill_climbing.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/searches/hill_climbing.kt:3:16: error: reference has a nullable type '((Double, Double) -> Double)?', use explicit '?.invoke()' to make a function-like call instead
    return (sp.f(sp.x, sp.y) as Double)
               ^
